--- a/src/styles/base/_general.scss
+++ b/src/styles/base/_general.scss
@@ -1,4 +1,14 @@
-h1, h2, h3, h4, h5, h6, ul {
+body {
+    @include light17;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+ul {
     margin: 0;
     padding: 0;
 }
@@ -9,4 +19,13 @@ h1, h2, h3, h4, h5, h6, ul {
     @include md(max-width, rem(690));
     @include lg(max-width, rem(930));
     @include xl(max-width, rem(1110));
+}
+
+ul {
+    list-style: none;
+}
+
+a {
+    color: #000;
+    text-decoration: none;
 }
