Сверстал первую страницу и попап

--- a/src/blocks/_modules.scss
+++ b/src/blocks/_modules.scss
@@ -1,3 +1,10 @@
 @import "modules/header/header";
 @import "modules/footer/footer";
+@import "modules/request-form/request-form";
 @import "components/secondary-nav/secondary-nav.scss";
+@import "components/main-slider/main-slider.scss";
+@import "components/about/about.scss";
+@import "components/advantages/advantages.scss";
+@import "components/main-maps/main-maps.scss";
+@import "components/form-inputs/form-inputs.scss";
+@import "components/overlay/overlay.scss";
