--- a/src/blocks/components/secondary-nav/secondary-nav.scss
+++ b/src/blocks/components/secondary-nav/secondary-nav.scss
@@ -44,7 +44,65 @@
   top: -7px;
   left: -40px;
 
+}
 
-  .nav__text {
-    margin-left: 2px;
+.nav__text {
+  margin-left: 2px;
+}
+
+.secondary-nav--in-footer {
+  flex-direction: column;
+  align-items: flex-start;
+
+  .secondary-nav {
+    margin-right: 24%;
   }
+
+  .nav__item {
+    margin-bottom: 23px;
+  }
+
+  .nav__item:nth-child(1) {
+    order: 4;
+
+    &::before {
+      background-image: url('../img/svg/phoneW.svg');
+      top: -3px;
+      left: -47px;
+    }
+
+
+  }
+
+  .nav__item:nth-child(2) {
+    order: 2;
+
+    &::before {
+      background-image: url('../img/svg/locationW.svg');
+      top: 0px;
+      left: -45px;
+    }
+  }
+
+  .nav__item:nth-child(3) {
+    order: 3;
+
+    &::before {
+      background-image: url('../img/svg/envelopeW.svg');
+      top: 2px;
+      left: -48px;
+    }
+  }
+
+  .nav__item:nth-child(4) {
+    order: 1;
+
+    &::before {
+      background-image: url('../img/svg/priceW.svg');
+      top: -1px;
+      left: -49px;
+    }
+
+  }
+
+}
