--- a/src/blocks/modules/footer/footer.scss
+++ b/src/blocks/modules/footer/footer.scss
@@ -20,10 +20,6 @@
   background-color: #544C58;
   display: flex;
   justify-content: center;
-  background-image: url('../img/svg/footer_blank.svg');
-  background-repeat: no-repeat;
-  background-position: 38.3% 40px;
-  background-size: 132px 136px;
 }
 
 .contract__link {
@@ -34,14 +30,21 @@
   text-decoration: underline;
 
   &::before {
-    content: '';
-    display: block;
-    position: absolute;
+    @include beforeAfter;
     top: 20;
     left: 8px;
     width: 25.1px;
     height: 25.6px;
     background-image: url('../img/svg/download.svg');
+  }
+
+  &::after {
+    @include beforeAfter;
+    top: 6px;
+    left: -145px;
+    width: 132px;
+    height: 136px;
+    background-image: url('../img/svg/footer_blank.svg');
   }
 }
 
@@ -56,6 +59,7 @@
   display: flex;
   flex-direction: column;
   padding-bottom: 30px;
+  position: relative;
 }
 
 .footer__lists {
@@ -66,46 +70,20 @@
   padding-top: 45px;
   padding-left: 30px;
   padding-right: 44px;
-  padding-bottom: 55px;
+  padding-bottom: 40px;
   box-sizing: border-box;
+  position: relative;
+}
 
-  .secondary-nav {
-    flex-direction: column;
-    align-items: flex-start;
+.nav__icon path,
+.nav__icon rect,
+.nav__icon circle {
+  stroke: #ffffff;
+}
 
-    .nav__item {
-      margin-bottom: 15px;
-    }
-
-    .nav__item:nth-child(1) {
-      order: 4
-    }
-
-    .nav__item:nth-child(2) {
-      order: 2
-    }
-
-    .nav__item:nth-child(3) {
-      order: 3
-    }
-
-    .nav__item:nth-child(4) {
-      order: 1
-    }
-
-  }
-
-  .nav__icon path,
-  .nav__icon rect,
-  .nav__icon circle {
-    stroke: #ffffff;
-  }
-
-  .footer_list:not(:last-child),
-  .secondary-nav {
-    margin-right: 293px;
-  }
-
+.footer_list:not(:last-child),
+.secondary-nav--in-footer {
+  margin-right: 24%px;
 }
 
 .footer_list {
@@ -119,6 +97,7 @@
 .footer-logo__link {
   width: 250px;
   margin: 0 auto;
+  padding-left: 14px;
 }
 
 .footer__link--alone {
