--- a/src/views/index.html
+++ b/src/views/index.html
@@ -34,7 +34,14 @@
 
 <body>
     @@include("../blocks/modules/header/header.html")
+    @@include("../blocks/components/main-slider/main-slider.html")
+    @@include("../blocks/components/about/about.html")
+    @@include("../blocks/components/advantages/advantages.html")
+    @@include("../blocks/components/main-maps/main-maps.html")
+    @@include("../blocks/modules/request-form/request-form.html")
     @@include("../blocks/modules/footer/footer.html")
+    @@include("../blocks/components/request-popup/request-popup.html")
+    @@include("../blocks/components/overlay/overlay.html")
     <script src="../js/main.js"></script>
     <script src="../js/vendor.js"></script>
 </body>
