Исправил пути файлов для продакшена

--- a/src/blocks/components/about/about.html
+++ b/src/blocks/components/about/about.html
@@ -2,7 +2,7 @@
   <div class="about-wrapper">
     <div class="about__item">
       <picture>
-        <img src="../img/delivery.jpg" srcset="../img/delivery@2x.jpg 2x" alt="" class="about__image">
+        <img src="./img/delivery.jpg" srcset="./img/delivery@2x.jpg 2x" alt="" class="about__image">
       </picture>
       <h3 class="about__title">Доставка с примеркой</h3>
       <p class="about__text">Самостоятельно заберем заказы ваших&nbsp;покупателей, аккуратно упакуем и доставим
@@ -11,7 +11,7 @@
     </div>
     <div class="about__item">
       <picture>
-        <img src="../img/pvz.jpg" srcset="../img/pvz@2x.jpg 2x" alt="" class="about__image">
+        <img src="./img/pvz.jpg" srcset="./img/pvz@2x.jpg 2x" alt="" class="about__image">
       </picture>
       <h3 class="about__title">Пункты выдачи</h3>
       <p class="about__text">Ваши клиенты могут забрать свои заказы<br>
@@ -21,7 +21,7 @@
     </div>
     <div class="about__item">
       <picture>
-        <img src="../img/store.jpg" srcset="../img/store@2x.jpg 2x" alt="" class="about__image">
+        <img src="./img/store.jpg" srcset="./img/store@2x.jpg 2x" alt="" class="about__image">
       </picture>
       <h3 class="about__title">Упаковка</h3>
       <p class="about__text">Бережно оформим каждый заказ, предложив различные варианты упаковки, в соответствии<br>
