--- a/src/blocks/components/main-maps/main-maps.html
+++ b/src/blocks/components/main-maps/main-maps.html
@@ -6,7 +6,7 @@
       <button class="main-maps__button main-maps__button--print">На печать</button>
     </div>
     <div class="main-maps__map-wrapper">
-      <img src="../img/map1.jpg" alt="" class="main-maps__image">
+      <img src="./img/map1.jpg" alt="" class="main-maps__image">
     </div>
   </div>
   <div class="main-maps__item">
@@ -16,7 +16,7 @@
       <button class="main-maps__button main-maps__button--print">На печать</button>
     </div>
     <div class="main-maps__map-wrapper">
-      <img src="../img/map2.jpg" alt="" class="main-maps__image">
+      <img src="./img/map2.jpg" alt="" class="main-maps__image">
     </div>
   </div>
 </section>
