--- a/src/blocks/components/main-slider/main-slider.html
+++ b/src/blocks/components/main-slider/main-slider.html
@@ -1,30 +1,30 @@
 <section class="main-slider slider-wrapper">
-  <div class="slider-wrapper">
-    <div class="slide-wrapper slide">
-      <img src="../img/main-slider/slider_img1.png" alt="" class="slide_image">
-      <div class="slide-info">
-        <h2 class="slide__title">Доставка по Москве<br>
+  <div class="slider__wrapper">
+    <div class="slider__slide-wrapper slide">
+      <img src="./img/main-slider/slider_img1.png" alt="" class="slider__image">
+      <div class="slider__info">
+        <h2 class="slider__title">Доставка по Москве<br>
           и Московской области
           с примеркой</h2>
-        <a href="#" class="slide__link">Подробнее</a>
+        <a href="#" class="slider__link">Подробнее</a>
       </div>
     </div>
-    <div class="slide-wrapper slide">
-      <img src="../img/main-slider/slider_img1.png" alt="" class="slide_image">
-      <div class="slide-info">
-        <h2 class="slide__title">Доставка по Москве
+    <div class="slider__slide-wrapper slide">
+      <img src="./img/main-slider/slider_img1.png" alt="" class="slider__image">
+      <div class="slider__info">
+        <h2 class="slider__title">Доставка по Москве
           и Московской области
           с примеркой</h2>
-        <a href="#" class="slide__link">Подробнее</a>
+        <a href="#" class="slider__link">Подробнее</a>
       </div>
     </div>
-    <div class="slide-wrapper slide">
-      <img src="../img/main-slider/slider_img1.png" alt="" class="slide_image">
-      <div class="slide-info">
-        <h2 class="slide__title">Доставка по Москве
+    <div class="slider__slide-wrapper slide">
+      <img src="./img/main-slider/slider_img1.png" alt="" class="slider__image">
+      <div class="slider__info">
+        <h2 class="slider__title">Доставка по Москве
           и Московской области
           с примеркой</h2>
-        <a href="#" class="slide__link">Подробнее</a>
+        <a href="#" class="slider__link">Подробнее</a>
       </div>
     </div>
   </div>
