--- a/src/blocks/components/secondary-nav/secondary-nav.html
+++ b/src/blocks/components/secondary-nav/secondary-nav.html
@@ -5,7 +5,7 @@
     </a>
   </li>
   <li class="nav__item">
-    <a href="./address.html" class="nav__link" alt="Адрес">
+    <a href="address.html" class="nav__link" alt="Адрес">
       </svg>
       <span class="nav__text">Адрес</span>
     </a>
@@ -16,7 +16,7 @@
     </a>
   </li>
   <li class="nav__item">
-    <a href="/prices.html" class="nav__link" alt="Цены">
+    <a href="prices.html" class="nav__link" alt="Цены">
       <span class="nav__text">Цены</span>
     </a>
   </li>
