--- a/src/styles/helpers/_mixins.scss
+++ b/src/styles/helpers/_mixins.scss
@@ -62,7 +62,7 @@
   line-height: 20px;
 }
 
-@mixin regular20 {
+@mixin fontMuseoRegular20 {
   font-family: 'Museo Sans', sans-serif;
   font-size: 20px;
   font-weight: 500;
