--- a/src/styles/helpers/_variables.scss
+++ b/src/styles/helpers/_variables.scss
@@ -5,6 +5,7 @@ $block: #EAEAEA;
 $button:#9E1935;
 $red-text: #A70033;
 $blue-link: #1960D6;
+$text-area_placeholder: #C1C1C1;
 
 /*GAPS: BEGIN*/
 $bottom35Gap: 35px
