--- a/src/views/pages/address.html
+++ b/src/views/pages/address.html
@@ -33,7 +33,7 @@
   @@include("../../blocks/components/address/address.html")
   @@include("../../blocks/components/request-form/request-form.html")
   @@include("../../blocks/modules/footer/footer.html")
-  <script src="./js/pageB.js"></script>
+  <script src="./js/main.js"></script>
   <script src="./js/vendor.js"></script>
 </body>
 
