--- a/src/blocks/components/request-form/request-form.scss
+++ b/src/blocks/components/request-form/request-form.scss
@@ -12,11 +12,15 @@
   }
 
   .request-form__question {
-    @include regular20;
+    @include fontMuseoRegular20;
     width: 96%;
     padding: 15px 25px;
     margin-bottom: 30px;
   }
+}
+
+.request-form__question::placeholder {
+  color: $text-area_placeholder;
 }
 
 .request-form__title {
