--- a/src/blocks/components/secondary-nav/secondary-nav.html
+++ b/src/blocks/components/secondary-nav/secondary-nav.html
@@ -1,23 +1,23 @@
 <ul class="secondary-nav">
-  <li class="nav__item">
-    <a href="#" class="nav__link" alt="Телефон">
-      <span class="nav__text">8-905-779-62-32</span>
+  <li class="secondary-nav__item">
+    <a href="#" class="secondary-nav__link" alt="Телефон">
+      <span class="secondary-nav__text">8-905-779-62-32</span>
     </a>
   </li>
-  <li class="nav__item">
-    <a href="address.html" class="nav__link" alt="Адрес">
+  <li class="secondary-nav__item">
+    <a href="address.html" class="secondary-nav__link" alt="Адрес">
       </svg>
-      <span class="nav__text">Адрес</span>
+      <span class="secondary-nav__text">Адрес</span>
     </a>
   </li>
-  <li class="nav__item">
-    <a href="#" class="nav__link" alt="Задать вопрос">
-      <span class="nav__text">Задать вопрос</span>
+  <li class="secondary-nav__item">
+    <a href="#" class="secondary-nav__link" alt="Задать вопрос">
+      <span class="secondary-nav__text">Задать вопрос</span>
     </a>
   </li>
-  <li class="nav__item">
-    <a href="prices.html" class="nav__link" alt="Цены">
-      <span class="nav__text">Цены</span>
+  <li class="secondary-nav__item">
+    <a href="prices.html" class="secondary-nav__link" alt="Цены">
+      <span class="secondary-nav__text">Цены</span>
     </a>
   </li>
 </ul>
