Добавил две карты с кастомными значками и областью доставки

--- a/src/blocks/components/maps/pvz-map.html
+++ b/src/blocks/components/maps/pvz-map.html
@@ -1,5 +1,7 @@
 <section class="delivery-range">
   <h2 class="delivery-range__title">Пункты на карте</h2>
   @@include("../../components/map-buttons/map-buttons.html")
-  <div class="delivery-range__map-wrapper"><img src="./img/map-pvz.jpg" alt="" class="delivery-range__map"></div>
+  <div class="delivery-range__map-wrapper">
+    <div id="pvz-map" class="delivery-range__map"></div>
+  </div>
 </section>
