--- a/src/views/pages/delivery-with-fitting.html
+++ b/src/views/pages/delivery-with-fitting.html
@@ -38,7 +38,11 @@
     @@include("../../blocks/components/info-block/info-block1.html")
     @@include("../../blocks/modules/footer/footer.html")
     <script src="./js/main.js"></script>
+    <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&amp;apikey=207cb5eb-ff96-49c3-848f-21ecfe91f9e2"
+        type="text/javascript"></script>
+    <script src="./js/deliveryWithFitting.js"></script>
     <script src="./js/vendor.js"></script>
+
 </body>
 
 </html>
