--- a/src/views/pages/pvz.html
+++ b/src/views/pages/pvz.html
@@ -37,6 +37,9 @@
   @@include("../../blocks/components/info-block/info-block2.html")
   @@include("../../blocks/modules/footer/footer.html")
   <script src="./js/main.js"></script>
+  <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&amp;apikey=681cc243-b402-4ad6-9b33-c94252a7984c"
+    type="text/javascript"></script>
+  <script src="./js/pvz.js"></script>
   <script src="./js/vendor.js"></script>
 </body>
 
