--- a/src/blocks/components/maps/delivery-range.html
+++ b/src/blocks/components/maps/delivery-range.html
@@ -1,5 +1,9 @@
 <section class="delivery-range">
   <h2 class="delivery-range__title">Границы доставки</h2>
   @@include("../../components/map-buttons/map-buttons.html")
-  <div class="delivery-range__map-wrapper"><img src="./img/map-range.jpg" alt="" class="delivery-range__map"></div>
+  <div class="delivery-range__map-wrapper">
+    <div id='delivery-range-map' class="delivery-range__map">
+
+    </div>
+  </div>
 </section>
