--- a/src/blocks/components/maps/maps.scss
+++ b/src/blocks/components/maps/maps.scss
@@ -1,20 +1,45 @@
 .delivery-range {
-  @include centered;
-  flex-direction: column;
-  padding-top: 60px;
-  padding-bottom: 90px;
+	@include centered;
+	flex-direction: column;
+	padding-top: 60px;
+	padding-bottom: 90px;
 
-  .map-buttons {
-    margin: 0 auto;
-  }
+	.map-buttons {
+		margin: 0 auto;
+	}
 }
 
 .delivery-range__title {
-  @include fontMuseoLight44;
-  text-align: center;
-  padding-bottom: 15px;
+	@include fontMuseoLight44;
+	text-align: center;
+	padding-bottom: 15px;
 }
 
 .delivery-range__map-wrapper {
-  padding-top: 25px;
+	padding-top: 25px;
 }
+
+.delivery-range__map,
+.delivery-range__map {
+	width: 100%;
+	height: 700px;
+	padding: 0;
+	margin: 0;
+}
+
+.delivery-range__map canvas,
+.delivery-range__map-wrapper canvas {
+	filter: grayscale(100%);
+	-moz-filter: grayscale(100%);
+	-ms-filter: grayscale(100%);
+	-o-filter: grayscale(100%);
+	filter: grayscale(100%);
+	-webkit-filter: grayscale(1);
+	filter: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg'><filter id='grayscale'><feColorMatrix type='matrix' values='0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0'/></filter></svg>#grayscale");
+}
+
+// .ymaps-2-1-74-map {
+// 	filter: grayscale(100%);
+// 	-webkit-filter: grayscale(100);
+// 	filter: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg'><filter id='grayscale'><feColorMatrix type='matrix' values='0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0'/></filter></svg>#grayscale");
+// }
