Добавил все карты

--- a/src/blocks/components/address/address.html
+++ b/src/blocks/components/address/address.html
@@ -17,6 +17,5 @@
     <li class="address__item address__item--location">Наш адрес: Москва, 2-я Карачаровская улица, дом 14 А, строение 1,
       офис 403</li>
   </ul>
-  @@include("../../components/map-buttons/map-buttons.html")
-  <div class="address__map-wrapper"><img src="./img/map-office.jpg" alt="" class="address__map"></div>
+  @@include("../maps/address.html")
 </section>
