--- a/src/blocks/components/main-maps/main-maps.html
+++ b/src/blocks/components/main-maps/main-maps.html
@@ -1,16 +1,10 @@
 <section class="main-maps">
   <div class="main-maps__item">
     <h2 class="main-maps__title">Область доставки</h2>
-    @@include("../../components/map-buttons/map-buttons.html")
-    <div class="main-maps__map-wrapper">
-      <img src="./img/map1.jpg" alt="" class="main-maps__image">
-    </div>
+    @@include("../maps/main-map-range.html")
   </div>
   <div class="main-maps__item">
     <h2 class="main-maps__title">Пункты выдачи</h2>
-    @@include("../../components/map-buttons/map-buttons.html")
-    <div class="main-maps__map-wrapper">
-      <img src="./img/map2.jpg" alt="" class="main-maps__image">
-    </div>
+    @@include("../maps/main-map-pvz.html")
   </div>
 </section>
