--- a/src/views/index.html
+++ b/src/views/index.html
@@ -43,6 +43,9 @@
     @@include("../blocks/components/request-form/request-popup.html")
     @@include("../blocks/components/overlay/overlay.html")
     <script src="./js/main.js"></script>
+    <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&amp;apikey=681cc243-b402-4ad6-9b33-c94252a7984c"
+        type="text/javascript"></script>
+    <script src="./js/mainPage.js"></script>
     <script src="./js/vendor.js"></script>
 </body>
 
