--- a/src/views/pages/address.html
+++ b/src/views/pages/address.html
@@ -34,6 +34,9 @@
   @@include("../../blocks/components/request-form/request-form.html")
   @@include("../../blocks/modules/footer/footer.html")
   <script src="./js/main.js"></script>
+  <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&amp;apikey=207cb5eb-ff96-49c3-848f-21ecfe91f9e2"
+    type="text/javascript"></script>
+  <script src="./js/address.js"></script>
   <script src="./js/vendor.js"></script>
 </body>
 
