Исправил печать на главной

--- a/src/blocks/components/main-maps/main-maps.html
+++ b/src/blocks/components/main-maps/main-maps.html
@@ -1,4 +1,4 @@
-<section class="main-maps">
+<section class="main-maps print">
   <div class="main-maps__item">
     <h2 class="main-maps__title">Область доставки</h2>
     @@include("../maps/main-map-range.html")
