Добавил страницу photo и первый уникальный компонент. Настроил минислайдеры и видео

--- a/src/blocks/_modules.scss
+++ b/src/blocks/_modules.scss
@@ -20,3 +20,5 @@
 @import "components/points/points.scss";
 @import "components/prices/prices.scss";
 @import "components/address/address.scss";
+@import "components/red-button/red-button.scss";
+@import "components/mini-slider/mini-slider.scss";
