--- a/src/blocks/components/advantages/advantages.html
+++ b/src/blocks/components/advantages/advantages.html
@@ -11,6 +11,6 @@
       с
       10.00 до 00.00.</p>
     <p class="advantages__text">Работаем по договору, с гарантией!</p>
-    <button class="advantages__button">Оформить заявку</button>
+    <button class="advantages__button red-button">Оформить заявку</button>
   </div>
 </section>
