--- a/src/blocks/components/main-slider/main-slider.html
+++ b/src/blocks/components/main-slider/main-slider.html
@@ -3,7 +3,7 @@
     <div class="slider__slide-wrapper slide">
       <img src="./img/main-slider/slider_img1.png" alt="" class="slider__image">
       <div class="slider__info">
-        <h2 class="slider__title">Доставка по Москве<br>
+        <h2 class="slider__title">Съёмка одежды<br>
           и Московской области
           с примеркой</h2>
         <a href="#" class="slider__link">Подробнее</a>
