--- a/src/blocks/components/request-form/request-form.html
+++ b/src/blocks/components/request-form/request-form.html
@@ -6,7 +6,7 @@
     </p>
     <form action="" class="request-form__form">
       @@include("../../components/form-inputs/form-inputs.html")
-      <button class="request-form__submit">Отправить заявку</button>
+      <button class="request-form__submit red-button">Отправить заявку</button>
     </form>
     <p class="request-form__sub-info">Нажимая кнопку, вы даёте согласие на обработку персональных данных в соответствии
       с
