--- a/src/blocks/components/request-form/request-form1.html
+++ b/src/blocks/components/request-form/request-form1.html
@@ -8,7 +8,7 @@
       @@include("../../components/form-inputs/form-inputs.html")
       <textarea class="request-form__question request-form__input " name="question" id="" cols="30" rows="4"
         placeholder="Вопрос или сообщение"></textarea>
-      <button class="request-form__submit">Отправить заявку</button>
+      <button class="request-form__submit red-button">Отправить заявку</button>
     </form>
     <p class="request-form__sub-info">Нажимая кнопку, вы даёте согласие на обработку персональных данных в соответствии
       с
