--- a/src/styles/helpers/_variables.scss
+++ b/src/styles/helpers/_variables.scss
@@ -1,11 +1,16 @@
 /*Colors*/
 $light-gray:#F7F7F7;
+$button-hover-grey: #707070;
 $dark-gray:#797979;
+$mini-slider-dots:#9B9B9B;
 $block: #EAEAEA;
 $button:#9E1935;
+$button-hoover-red:#87152D;
+$button-focus-red:#6E1125;
 $red-text: #A70033;
 $blue-link: #1960D6;
 $text-area_placeholder: #C1C1C1;
+
 
 /*GAPS: BEGIN*/
 $bottom35Gap: 35px
