--- a/src/blocks/components/about/about.scss
+++ b/src/blocks/components/about/about.scss
@@ -17,6 +17,7 @@
 
 .about__image {
   width: 100%;
+  position: relative;
 }
 
 .about__title {
@@ -31,6 +32,57 @@
   line-height: 28px;
 }
 
+.about__item--4 {
+  width: 24.5%;
+
+  .about__title {
+    @include fontMuseoLightlight26;
+
+  }
+
+  video {
+    outline: none;
+  }
+
+  .about__text {
+    @include fontMuseoLight15;
+    line-height: 25px;
+  }
+
+  .video-js .vjs-tech {
+    height: 312px;
+  }
+
+  .about__image {
+    height: 312px;
+  }
+}
+
 .about__link {
   min-width: 71%;
+}
+
+.about__poster {
+  position: absolute;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  z-index: 100;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  transition: all 0.3s ease;
+
+  &::before {
+    @include beforeAfter;
+    top: 38%;
+    width: 67px;
+    height: 67px;
+    background-image: url(../img/svg/play.svg);
+  }
+
+  &--hidden {
+    z-index: -1;
+    opacity: 0;
+  }
 }
