--- a/src/blocks/components/button-more/button-more.scss
+++ b/src/blocks/components/button-more/button-more.scss
@@ -7,4 +7,13 @@
   border-radius: 4px;
   margin: 0 auto;
   margin-top: 15px;
+
+  &:hover {
+    background-color: $button-hover-grey;
+  }
+
+  &:focus {
+    background-color: black;
+    color: white;
+  }
 }
