Добавил на photo.html резиновый слайдер и заготовку под блоки примеров фото

--- a/src/blocks/_modules.scss
+++ b/src/blocks/_modules.scss
@@ -24,3 +24,5 @@
 @import "components/mini-slider/mini-slider.scss";
 @import "components/examples/examples.scss";
 @import "components/examples/examples-owl.scss";
+@import "components/photo-slider/photo-slider.scss";
+@import "components/photos/photos.scss";
