--- a/src/views/pages/photo.html
+++ b/src/views/pages/photo.html
@@ -39,6 +39,8 @@
   @@include("../../blocks/modules/header/header.html")
   @@include("../../blocks/components/about/about_f.html")
   @@include("../../blocks/components/examples/examples.html")
+  @@include("../../blocks/components/photo-slider/photo-slider-cloth.html")
+  @@include("../../blocks/components/photos/photos.html")
   @@include("../../blocks/modules/footer/footer.html")
   @@include("../../blocks/components/overlay/overlay.html")
   <script src="./js/main.js"></script>
