Добавил кмпонет прайса для фотостудии

--- a/src/blocks/_modules.scss
+++ b/src/blocks/_modules.scss
@@ -26,3 +26,4 @@
 @import "components/examples/examples-owl.scss";
 @import "components/photo-slider/photo-slider.scss";
 @import "components/photos/photos.scss";
+@import "components/photo-price/price.scss";
