--- a/src/styles/helpers/_variables.scss
+++ b/src/styles/helpers/_variables.scss
@@ -4,6 +4,7 @@ $button-light-gray: #e3e3e3;
 $button-hover-grey: #707070;
 $button-active-grey: #393939;
 $dark-gray: #797979;
+$image-background: #D9D9D9;
 $mini-slider-dots: #9b9b9b;
 $block: #eaeaea;
 $button: #9e1935;
