--- a/src/views/pages/photo.html
+++ b/src/views/pages/photo.html
@@ -41,6 +41,7 @@
   @@include("../../blocks/components/examples/examples.html")
   @@include("../../blocks/components/photo-slider/photo-slider-cloth.html")
   @@include("../../blocks/components/photos/photos.html")
+  @@include("../../blocks/components/photo-price/price.html")
   @@include("../../blocks/modules/footer/footer.html")
   @@include("../../blocks/components/overlay/overlay.html")
   <script src="./js/main.js"></script>
