Внес правки по W3C для главной

--- a/src/blocks/components/address/address.html
+++ b/src/blocks/components/address/address.html
@@ -1,6 +1,6 @@
 <section class="address print">
   @@include("../close-element/close-element.html")
-  <h2 class="address__title">Адрес офиса<br class="mobile-br"> службы доставки</h2>
+  <h1 class="address__title">Адрес офиса службы доставки</h1>
   <div class="address__manager">
     <picture class="address__pic">
       <source media="(max-width: 768px)" srcset="./img/evgeny_M.jpg 1x, ./img/evgeny_M@2x.jpg 2x">
