--- a/src/blocks/components/delivery-regions/delivery-regions.html
+++ b/src/blocks/components/delivery-regions/delivery-regions.html
@@ -3,7 +3,7 @@
     <picture class="delivery-regions__picture delivery-regions__picture--desktop"><img src="./img/delivery-moscow.jpg"
         srcset="./img/delivery-moscow@2x.jpg 2x" alt="" class="delivery-regions__image"></picture>
     <div class="delivery-regions__info">
-      <h3 class="delivery-regions__title">Доставка с примеркой<br class="mobile-br"> по Москве в пределах МКАД</h3>
+      <h3 class="delivery-regions__title">Доставка с примеркой по Москве в пределах МКАД</h3>
       <picture class="delivery-regions__picture delivery-regions__picture--mobile"><img
           src="./img/delivery-moscow_M.jpg" srcset="./img/delivery-moscow_M@2x.jpg 2x" alt=""
           class="delivery-regions__image"></picture>
@@ -23,8 +23,7 @@
         src="./img/delivery-moscow-region.jpg" srcset="./img/delivery-moscow-region@2x.jpg 2x" alt=""
         class="delivery-regions__image"></picture>
     <div class="delivery-regions__info">
-      <h3 class="delivery-regions__title">Доставка с примеркой<br class="mobile-br"> по Новой Москве<br
-          class="desktop-br">
+      <h3 class="delivery-regions__title">Доставка с примеркой по Новой Москве<br class="desktop-br">
         и Московской области до 100 км от МКАД</h3>
       <picture class="delivery-regions__picture delivery-regions__picture--mobile"><img
           src="./img/delivery-moscow-region_M.jpg" srcset="./img/delivery-moscow-region_M@2x.jpg 2x" alt=""
