--- a/src/blocks/components/main-slider/main-slider.html
+++ b/src/blocks/components/main-slider/main-slider.html
@@ -7,8 +7,8 @@
         <img src="./img/main-slider/slider_img1.png" alt="" class="slider__image">
       </picture>
       <div class="slider__info">
-        <h2 class="slider__title">Доставка по Москве<br class="mobile-br">
-          и Московской области<br class="mobile-br">
+        <h2 class="slider__title">Доставка по Москве
+          и Московской области
           с примеркой</h2>
         <a href="#" class="slider__link">Подробнее</a>
       </div>
@@ -20,8 +20,8 @@
         <img src="./img/main-slider/slider_img1.png" alt="" class="slider__image">
       </picture>
       <div class="slider__info">
-        <h2 class="slider__title">Доставка по Москве<br class="mobile-br">
-          и Московской области<br class="mobile-br">
+        <h2 class="slider__title">Доставка по Москве
+          и Московской области
           с примеркой</h2>
         <a href="#" class="slider__link">Подробнее</a>
       </div>
@@ -33,8 +33,8 @@
         <img src="./img/main-slider/slider_img1.png" alt="" class="slider__image">
       </picture>
       <div class="slider__info">
-        <h2 class="slider__title">Доставка по Москве<br class="mobile-br">
-          и Московской области<br class="mobile-br">
+        <h2 class="slider__title">Доставка по Москве
+          и Московской области
           с примеркой</h2>
         <a href="#" class="slider__link">Подробнее</a>
       </div>
