--- a/src/blocks/components/request-form/request-form1.html
+++ b/src/blocks/components/request-form/request-form1.html
@@ -4,9 +4,9 @@
     <p class="request-form__info">Узнайте больше! Будем рады подробнее рассказать о нашем сервисе и ответить на
       вопросы
     </p>
-    <form action="" class="request-form__form">
+    <form action="test.php" class="request-form__form">
       @@include("../../components/form-inputs/form-inputs.html")
-      <textarea class="request-form__question request-form__input " name="question" id="" cols="30" rows="4"
+      <textarea class="request-form__question request-form__input " name="question" cols="30" rows="4"
         placeholder="Вопрос или сообщение"></textarea>
       <button class="request-form__submit red-button">Отправить заявку</button>
     </form>
