--- a/src/blocks/components/secondary-nav/secondary-nav.html
+++ b/src/blocks/components/secondary-nav/secondary-nav.html
@@ -1,22 +1,21 @@
 <ul class="secondary-nav">
   <li class="secondary-nav__item">
-    <a href="#" class="secondary-nav__link" alt="Телефон">
+    <a href="#" class="secondary-nav__link" title="Телефон">
       <span class="secondary-nav__text">8-905-779-62-32</span>
     </a>
   </li>
   <li class="secondary-nav__item">
-    <a href="address.html" class="secondary-nav__link" alt="Адрес">
-      </svg>
+    <a href="address.html" class="secondary-nav__link" title="Адрес">
       <span class="secondary-nav__text">Адрес</span>
     </a>
   </li>
   <li class="secondary-nav__item">
-    <a href="#" class="secondary-nav__link" alt="Задать вопрос">
+    <a href="#" class="secondary-nav__link" title="Задать вопрос">
       <span class="secondary-nav__text">Задать вопрос</span>
     </a>
   </li>
   <li class="secondary-nav__item">
-    <a href="prices.html" class="secondary-nav__link" alt="Цены">
+    <a href="prices.html" class="secondary-nav__link" title="Цены">
       <span class="secondary-nav__text">Цены</span>
     </a>
   </li>
