--- a/src/blocks/components/form-inputs/form-inputs.html
+++ b/src/blocks/components/form-inputs/form-inputs.html
@@ -1,5 +1,5 @@
 <div class="request-form__fieldset">
   <input type="text" class="request-form__input" placeholder="Имя">
-  <input type="phone" class="request-form__input" placeholder="Номер телефона">
+  <input type="tel" class="request-form__input" placeholder="Номер телефона">
   <input type="email" class="request-form__input" placeholder="E-mail">
 </div>
