--- a/src/blocks/components/request-form/request-form.html
+++ b/src/blocks/components/request-form/request-form.html
@@ -4,7 +4,7 @@
     <p class="request-form__info">Узнайте больше! Будем рады подробнее рассказать о нашем сервисе и ответить на
       вопросы
     </p>
-    <form action="" class="request-form__form">
+    <form action="test.php" class="request-form__form">
       @@include("../../components/form-inputs/form-inputs.html")
       <button class="request-form__submit red-button">Отправить заявку</button>
     </form>
