--- a/src/blocks/components/request-form/request-popup.html
+++ b/src/blocks/components/request-form/request-popup.html
@@ -1,17 +1,17 @@
 <section class="request-form request-form__popup">
   @@include("../../components/close-element/close-element.html")
   <div class="request-form__wrapper">
-    <h2 class="request-form__title">Заявка<br class="mobile-br"> на доставку</h2>
+    <h2 class="request-form__title">Заявка на доставку</h2>
     <p class="request-form__info">Будем рады подробнее рассказать о нашем сервисе и ответить на вопросы
     </p>
-    <form action="" class="request-form_form">
+    <form action="test.php" class="request-form_form">
       @@include("../../components/form-inputs/form-inputs.html")
-      <textarea class="request-form__question request-form__input " name="question" id="" cols="30"
+      <textarea class="request-form__question request-form__input " name="question" cols="30"
         rows="4">Вопрос или сообщение</textarea>
       <button class="request-form__submit red-button">Отправить заявку</button>
     </form>
     <p class="request-form_sub-info">Нажимая кнопку, вы даёте согласие на обработку персональных данных в соответствии
       с
-      условиями <a class="request-form__link">соглашения<a></p>
+      условиями <a class="request-form__link">соглашения</a></p>
   </div>
 </section>
