--- a/src/blocks/components/top-Info-blocks/fitting.html
+++ b/src/blocks/components/top-Info-blocks/fitting.html
@@ -1,12 +1,12 @@
 <section class="top-info-block">
   @@include("../close-element/close-element.html")
-  <h2 class="top-info-block__title">Доставка<br class="mobile-br"> с примеркой</h2>
+  <h1 class="top-info-block__title">Доставка с примеркой</h1>
   <picture class="top-info-block__picture">
     <source type="image/jpg" media="(max-width: 768px)" srcset="./img/delivery2_M.jpg 1x, ./img/delivery2_M@2x.jpg 2x">
     <img src="./img/delivery2.jpg" srcset="./img/delivery2@2x.jpg 2x" alt="Доставка с примеркой"
       class="top-info-block__image"></picture>
   <div class="top-info-block__info">
-    <h3 class="top-info-block__sub-title">Как это работает</h3>
+    <h2 class="top-info-block__sub-title">Как это работает</h2>
     <p class="top-info-block__text">Наш курьер приезжает к вам, самостоятельно забирает заказы ваших клиентов и отвозит
       их в
       распределительный
